<resources>
    <string name="app_name">Concessionária Taurus</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="emailhint">Digite seu e-mail</string>
    <string name="senhahint">Digite sua senha</string>
    <string name="Entrar">Entrar</string>
    <string name="Editar">Editar</string>
    <string name="Excluir">Excluir</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="Nomemarca">Digite a marca</string>
    <string name="Email">Digite a mensagem</string>
    <string name="Enviaremail">ENVIAR OFERTA</string>

    <string name="Nome">Nome</string>
    <string name="CEP">CEP</string>
    <string name="CPF">CPF</string>
    <string name="Senha">Senha</string>
    <string name="Telefone">Telefone</string>
    <string name="Emailus">Email</string>
    <string name="Gerente">Gerente</string>
    <string name="Vendedor">Vendedor</string>
    <string name="Cliente">Cliente</string>
    <string name="Confirmarsenha">Confirme sua senha</string>
    <string name="Cadastrousuario">Cadastrar usuário</string>
    <string name="Cadastromarca">Cadastrar marca</string>
    <string name="Envioferta">Envio de ofertas</string>

    <string name="Ofertas">Receber ofertas promocionais</string>
    <string name="title_activity_maps">Map</string>
</resources>
