<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="www.projetotaurus.com.br.taurusfinal.Login"
    android:orientation="vertical"
    android:gravity="fill"
    android:background="@mipmap/lotusa"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="143dp"
            app:srcCompat="@mipmap/logotauuuu"
            android:id="@+id/imageView2" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edtEmail"
            android:hint="@string/emailhint"
            android:layout_above="@+id/btnEntrar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_height="56dp"
            android:layout_width="352dp"
            android:textColorHint="@color/white"
             />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtSenha"
            android:hint="@string/senhahint"
            android:textColor="@color/white"
            android:layout_above="@+id/btnEntrar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="352dp"
            android:layout_height="56dp"
            android:fontFamily="sans-serif"
            android:textColorHint="@color/white"
            android:textColorLink="@android:color/white"
            android:textColorHighlight="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:text="@string/Entrar"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/btnEntrar"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/rounded"
            android:textColorHighlight="@color/white"/>


    </LinearLayout>

    <Button
        android:text="Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/testaofertas" />

</LinearLayout>
